hphp/hack/test/typecheck/array/tuple_array_get_non_int_bad.php.like_types.exp
File "tuple_array_get_non_int_bad.php", line 13, characters 13-15:
Tuple elements can only be accessed with an integer literal (Typing[4116])
