hphp/hack/test/typecheck/array/tuple_array_get_non_int_bad.php
<?hh // partial
/**
 * Copyright (c) 2018, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function array_get_non_int((int, string) $x): int {
  return $x['1'];
}
